--- a/roles/frontend/templates/nginx.conf.j2
+++ b/roles/frontend/templates/nginx.conf.j2
@@ -47,11 +47,11 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://{{ Catalogue_Host }}:8080/; }
-        location /api/user/ { proxy_pass http://{{ User_Host }}:8080/; }
-        location /api/cart/ { proxy_pass http://{{ Cart_Host }}:8080/; }
-        location /api/shipping/ { proxy_pass http://{{ Shipping_Host }}:8080/; }
-        location /api/payment/ { proxy_pass http://{{ Payment_Host }}:8080/; }
+        location /api/catalogue/ { proxy_pass http://{{ Catalogue_Host }}/; }
+        location /api/user/ { proxy_pass http://{{ User_Host }}/; }
+        location /api/cart/ { proxy_pass http://{{ Cart_Host }}/; }
+        location /api/shipping/ { proxy_pass http://{{ Shipping_Host }}/; }
+        location /api/payment/ { proxy_pass http://{{ Payment_Host }}/; }
 
         location /health {
           stub_status on;
